# gnome-gis

./: README.md  meson.build  org.gnome.gis.json
data/: meson.build  org.gnome.gis.desktop.in  org.gnome.gis.gschema.xml  org.gnome.gis.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gis-application.c  gis-application.h  gis-window.c  gis-window.h  gis-window.ui  gis.gresource.xml  main.c  meson.build
src/gtk/: help-overlay.ui
